Mostly work on CombineOrders.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -3,7 +3,7 @@ manualMode = False
 overwrite = True
 runtimeData = /home/astephens/github/GNIRS-Pype/runtimeData/  ; TODO: FIXME
 
-[getData]
+[DownloadData]
 RawDataDir = /home/astephens/github/GNIRS-Pype/rawData/  ; where the raw data are or where they should be downloaded to
 Program = None  ; Program ID to download from the Gemini archive
 ObsIDs = None  ; List of observation IDs to download from the Gemini Archive
@@ -17,10 +17,10 @@ ObsIDs = None  ; List of observation IDs to download from the Gemini Archive
 [CalibrationDirectories]
 
 [gnirsPipeline]
-getData = True
+DownloadData = True
 sort = True
 checkData = True
-calibrationReduction = True
+calibrationReduction = True  ; this could use a description
 scienceReduction = True
 telluricReduction = True
 combineSpectra2D = True
@@ -28,11 +28,11 @@ extractSpectra1D = True
 telluricCorrection = True
 fluxCalibration = True
 combineOrdersXD = False
-calculateSpectrumSNR = False
+Calculate_SNR = False
 writeDataSheet = False
 
-[interactive]
-nsprepareInter = False
+[interactive]                ; there should be a description of each item
+nsprepareInter = False       ; could this be just 'nsprepare'?
 nsflatInter = False
 nscombineInter = False
 nssdistInter = False
@@ -43,6 +43,7 @@ hLineInter = False
 continuumInter = False
 telluricInter = False
 tempInter = False
+combine_orders = False       ;  adjust the relative fluxes of each order before combining them
 
 [runtimeFilenames]
 cleanirPrefix = c
@@ -74,7 +75,7 @@ bb_unscaled = blackbody_order
 bb_scaled = scaled_blackbody_order
 fluxCalibPrefix = b
 orderOffsetLog = order_offsets.log
-orderScaledPrefix = z
+finalPrefix = z
 orderResampledSrc = src_odcomb.fits
 orderResampledSky = sky_odcomb.fits
 
@@ -140,7 +141,7 @@ fluxCalibrationMethod = telluricapproximate
 [combineOrdersXD]
 redshift = 
 shiftToRestframe = False
-offsetCorrectionMethod = 
+# offsetCorrectionMethod =   ; changed to an interactive mode
 orderResampling = True
 
 [calculateSpectrumSNR]
@@ -174,14 +175,14 @@ Stop = 1
 8 = 7500:9500
 
 [zeroMagnitudeFluxes]
-3 = 4.28e-11
-4 = 1.13e-10
-5 = 3.129e-10
+3 = 4.28e-11            ; K-band, units?
+4 = 1.13e-10            ; H-band
+5 = 3.129e-10           ; J-band
 6 = 3.129e-10
 7 = 3.129e-10
 8 = 3.129e-10
 
-[orderScalingRegions]
+[orderScalingRegions]  ; The range of pixels in each order that should be incorporated into the final, merged spectrum.
 3 = 10:1018
 4 = 50:1018
 5 = 160:1018
