Plot individual orders in write_pdf.py

--- a/gnirs.cfg
+++ b/gnirs.cfg
@@ -27,13 +27,13 @@ combineSpectra2D = True
 extractSpectra1D = True
 telluricCorrection = True
 fluxCalibration = True
-combineOrdersXD = False
+CombineOrders = True
 Calculate_SNR = False
 writeDataSheet = False
 
 [interactive]                ; there should be a description of each item
-nsprepareInter = False       ; could this be just 'nsprepare'?
-nsflatInter = False
+nsprepareInter = False       ; could this be just 'nsprepare' ?
+nsflatInter = False          ; and this be just 'nsflat' ?
 nscombineInter = False
 nssdistInter = False
 nswavelengthInter = False
@@ -61,7 +61,7 @@ fitcoordsPrefix = f
 transformPrefix = t
 radiationCorrectedPrefix = l
 noskysubReducedPrefix = k
-combinedsrc = src_comb.fits
+combinedsrc = src_comb.fits  ; I'm tempted to remove the .fits here so that I don't have to keep removing it later...
 combinedsky = sky_comb.fits
 extractRegularPrefix = v
 extractFullSlitPrefix = a
@@ -108,8 +108,6 @@ cleanir = False
 radiationCorrectionMethod = fixpix
 radiationThreshold = 50
 
-[combineSpectra2D]
-
 [extractSpectra1D]
 useApall = True
 subtractBkg = none
@@ -147,8 +145,6 @@ orderResampling = True
 [calculateSpectrumSNR]
 Start = 1
 Stop = 1
-
-[writeDataSheet]
 
 [telluricRegions]
 3 = *
@@ -189,4 +185,3 @@ Stop = 1
 6 = 350:1018
 7 = 350:960
 8 = 600:900
-
