--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -1,39 +1,31 @@
 [defaults]
 manualMode = False
 overwrite = True
-runtimeData = /home/astephens/github/GNIRS-Pype/runtimeData/  ; TODO: FIXME
+runtimeData = /home/astephens/github/GNIRS-Pype/runtimeData/  ; FIXME
 
 [DownloadData]
 RawDataDir = /home/astephens/github/GNIRS-Pype/rawData/  ; where the raw data are or where they should be downloaded to
-Program = None  ; Program ID to download from the Gemini archive
-ObsIDs = None  ; List of observation IDs to download from the Gemini Archive
-
-[ScienceDirectories]
-
-[TelluricDirectories]
-
-[StandardDirectories]
-
-[CalibrationDirectories]
+Program = None               ; Program ID to download from the Gemini archive
+ObsIDs = None                ; List of observation IDs to download from the Gemini Archive
 
 [gnirsPipeline]
-DownloadData = True
-sort = True
-checkData = True
-calibrationReduction = True  ; this could use a description
-scienceReduction = True
-telluricReduction = True
-combineSpectra2D = True
-extractSpectra1D = True
-telluricCorrection = True
-fluxCalibration = True
-CombineOrders = True
-Calculate_SNR = False
-writeDataSheet = False
+DownloadData = True          ; 1. Download data from the Gemini archive.  Program or ObsIDs must be specified above.
+sort = True                  ; 2.
+checkData = True             ; 3.
+calibrationReduction = True  ; 4.
+scienceReduction = True      ; 5a.
+telluricReduction = True     ; 5b.
+combineSpectra2D = True      ; 6.
+extractSpectra = True        ; 7.
+telluricCorrection = True    ; 8.
+fluxCalibration = True       ; 9.
+CombineOrders = True         ; 10.
+CalculateSNR = True          ; 11. Calculate the noise and S/N at each wavelength
+PDFsummary = True            ; 12. Generate a table of target parameters and plots of the final spectra
 
-[interactive]                ; there should be a description of each item
+[interactive]                ; there should be a description for each of these
 nsprepareInter = False       ; could this be just 'nsprepare' ?
-nsflatInter = False          ; and this be just 'nsflat' ?
+nsflatInter = False          ; and this be just 'nsflat' ?  (do we need the "Inter" part since we're in the interactive section?)
 nscombineInter = False
 nssdistInter = False
 nswavelengthInter = False
@@ -44,6 +36,11 @@ continuumInter = False
 telluricInter = False
 tempInter = False
 combine_orders = False       ;  adjust the relative fluxes of each order before combining them
+
+[ScienceDirectories]         ; List of science target directories to reduce; will be populated by the 'sort' routine.
+[TelluricDirectories]
+[StandardDirectories]
+[CalibrationDirectories]
 
 [runtimeFilenames]
 cleanirPrefix = c
@@ -82,8 +79,6 @@ orderResampledSky = sky_odcomb.fits
 [sort]
 proprietaryCookie = 
 telluricTimeThreshold = 5400
-
-[checkData]
 
 [calibrationReduction]
 Start = 1
@@ -141,10 +136,6 @@ redshift =
 shiftToRestframe = False
 # offsetCorrectionMethod =   ; changed to an interactive mode
 orderResampling = True
-
-[calculateSpectrumSNR]
-Start = 1
-Stop = 1
 
 [telluricRegions]
 3 = *
