--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -21,7 +21,7 @@ telluricCorrection = True    ; 8.
 fluxCalibration = True       ; 9.
 CombineOrders = True         ; 10.
 CalculateSNR = True          ; 11. Calculate the noise and S/N at each wavelength
-PDFsummary = True            ; 12. Generate a table of target parameters and plots of the final spectra
+PDFSummary = True            ; 12. Generate a table of target parameters and plots of the final spectra
 
 [interactive]                ; there should be a description for each of these
 nsprepareInter = False       ; could this be just 'nsprepare' ?
@@ -52,7 +52,6 @@ IRflat = IRflat.fits
 IRflat_bpm = IRflat_bpm.pl
 masterflat = masterflat.fits
 combinedarc = arc_comb.fits
-databaseDir = database
 waveCalibPrefix = w
 fitcoordsPrefix = f
 transformPrefix = t
@@ -131,7 +130,7 @@ Stop = 4
 referenceStarTableFilename = stars_spectraltypes_temperatures.txt
 fluxCalibrationMethod = telluricapproximate
 
-[combineOrdersXD]
+[CombineOrders]
 redshift = 
 shiftToRestframe = False
 # offsetCorrectionMethod =   ; changed to an interactive mode
