Work on gnirsReduce.py.

--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -1,5 +1,5 @@
 [defaults]
-manualMode = False
+manualMode = False           ; step-by-step ?  Pause after each step and wait for the user to hit <Enter> which is useful for debugging.
 overwrite = True
 runtimeData = /home/astephens/github/GNIRS-Pype/runtimeData/  ; FIXME
 
