work on extract_spectra.py

--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -93,7 +93,7 @@ Stop = 5
 cleanir = False
 radiationCorrectionMethod = fixpix
 radiationThreshold = 20
-checkPeaksMatch = True
+checkPeaksMatch = True       ; What is this?
 
 [telluricReduction]
 Start = 1
@@ -106,11 +106,12 @@ radiationThreshold = 50
 useApall = True
 subtractBkg = none
 extractApertureRadius = 4
-checkPeaksMatch = False
-toleranceOffset = 5
+checkPeaksMatch = True
+toleranceOffset = 5          ; max offset between the location of the science spectrum compared to what is expected (pixels)
 extractFullSlit = False
 extractStepwise = False
 extractStepSize = 6
+extractApertureWindow = 10
 extractApertureWindow = 10
 
 [telluricCorrection]
