start updating gnirsTelluric.py

--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -34,7 +34,7 @@ nsextractInter = False
 hLineInter = False
 continuumInter = False
 telluricInter = False
-tempInter = False
+tempInter = False            ; "temporary" interactive flag(?) for displaying a comparison of the H-line corrected Telluric
 combine_orders = False       ;  adjust the relative fluxes of each order before combining them
 
 [ScienceDirectories]         ; List of science target directories to reduce; will be populated by the 'sort' routine.
@@ -145,7 +145,15 @@ orderResampling = True
 7 = 9000:10000
 8 = 8500:9500
 
-[hLineRegions]
+[TelluricFitOrders]          ; Telluric continuum fitting orders
+3 = 5
+4 = 2
+5 = 3
+6 = 5
+7 = 5
+8 = 5
+
+[hLineRegions]               ; Regions to use around hydrogen lines
 3 = 21400:21900
 4 = 15500:18000
 5 = 12750:12900
