--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -116,7 +116,7 @@ extractApertureWindow = 10
 [telluricCorrection]
 Start = 1
 Stop = 5
-hLineMethod = vega
+hLineMethod = vega           ; Methods include: vega, lineFitAuto, lineFitManual, vega_tweak, lineFit_tweak, or None
 fitTelContinuum_order3 = 5
 fitTelContinuum_order4 = 2
 fitTelContinuum_order5 = 3
