--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -126,7 +126,7 @@ fitTelContinuum_order8 = 5
 [fluxCalibration]
 Start = 1
 Stop = 4
-referenceStarTableFilename = stars_spectraltypes_temperatures.txt
+StellarTemperatureData = stellar_temperatures.dat
 fluxCalibrationMethod = telluricapproximate
 
 [CombineOrders]
