flux_calibrate.py

--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -127,7 +127,7 @@ fitTelContinuum_order8 = 5
 Start = 1
 Stop = 4
 StellarTemperatureData = stellar_temperatures.dat
-fluxCalibrationMethod = telluricapproximate
+fluxCalibrationMethod = telluricapproximate  ; Options include: fluxcalibrator or telluricapproximate
 
 [CombineOrders]
 redshift = 
