Change zero magnitude fluxes from orders to bands

--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -168,12 +168,9 @@ orderResampling = True
 8 = 7500:9500
 
 [zeroMagnitudeFluxes]
-3 = 4.28e-11            ; K-band, units?
-4 = 1.13e-10            ; H-band
-5 = 3.129e-10           ; J-band
-6 = 3.129e-10
-7 = 3.129e-10
-8 = 3.129e-10
+K = 4.28e-11            ; K-band, units?
+H = 1.13e-10            ; H-band
+J = 3.129e-10           ; J-band
 
 [orderScalingRegions]  ; The range of pixels in each order that should be incorporated into the final, merged spectrum.
 3 = 10:1018
