--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -116,12 +116,6 @@ extractApertureWindow = 10
 Start = 1
 Stop = 5
 hLineMethod = Vega           ; Methods include: Vega, Lorentz, Manual, Vega-Tweak, Lorentz-Tweak, or None
-fitTelContinuum_order3 = 5
-fitTelContinuum_order4 = 2
-fitTelContinuum_order5 = 3
-fitTelContinuum_order6 = 5
-fitTelContinuum_order7 = 5
-fitTelContinuum_order8 = 5
 
 [fluxCalibration]
 Start = 1
@@ -151,7 +145,7 @@ orderResampling = True
 7 = 5
 8 = 5
 
-[hLineRegions]               ; Regions to use around hydrogen lines
+[hLineRegions]               ; Regions to use when fitting hydrogen lines
 3 = 21400:21900
 4 = 15500:18000
 5 = 12750:12900
@@ -168,7 +162,7 @@ orderResampling = True
 8 = 7500:9500
 
 [zeroMagnitudeFluxes]
-K = 4.28e-11            ; K-band, units?
+K = 4.28e-11            ; K-band, units?  reference?
 H = 1.13e-10            ; H-band
 J = 3.129e-10           ; J-band
 
