--- a/gnirs-pype.cfg
+++ b/gnirs-pype.cfg
@@ -166,7 +166,7 @@ K = 4.28e-11            ; K-band, units?  reference?
 H = 1.13e-10            ; H-band
 J = 3.129e-10           ; J-band
 
-[orderScalingRegions]  ; The range of pixels in each order that should be incorporated into the final, merged spectrum.
+[orderScalingRegions]  ; The range of pixels in each order that should be incorporated into the final merged spectrum.
 3 = 10:1018
 4 = 50:1018
 5 = 160:1018
